# ncsh-dashboard

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Tiltfile  app.py  docker-compose.yml  entrypoint.sh  fly.toml  gunicorn.conf.py  litefs.yml  pyproject.toml  requirements.txt
.cursorrules/: build.md  development.md  python.md  test.md
.github/workflows/: daily-data-refresh.yml  deploy.yml  terraform.yml
scripts/: merge_team_groups.py
src/: auth.py  callback.py  claude_summary.py  db.py  layout.py  logger.py  monkey_patch.py  queries.py  style.py  util.py
terraform/: README.md  iam.tf  main.tf  terraform.tfvars
