[project]
name = "ncsh-dashboard"
version = "0.1.9"
description = "NC Soccer Analytics Dashboard"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.11.1",
    "plotly",
    "pandas",
    "duckdb",
    "numpy",
    "dash-bootstrap-components",
    "gunicorn",
    "eventlet",
    "authlib",
    "requests",
    "six",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"